fixed bug where modal was not overlapping all other elements

--- a/src/js/components/display/display.styles.scss
+++ b/src/js/components/display/display.styles.scss
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 1;
     background: #22252c;
     border-bottom: 2px solid black;
     padding: .5rem 0;
