--- a/src/js/components/modal/modal.styles.scss
+++ b/src/js/components/modal/modal.styles.scss
@@ -13,9 +13,10 @@
 }
 
 .modal {
-    position: absolute;
+    position: fixed;
+    top: 0;
+    bottom: 0;
     background: rgba(18, 18, 18, 0.5);
-    z-index: 1;
     width: 100%;
     height: 100%;
     display: flex;
@@ -25,7 +26,7 @@
     transition: all .3s;
     opacity: 1;
     visibility: hidden;
-    border-radius: 20px;
+    z-index: 2;
 
     .modal-content {
         width: 0px;
